Include all smali test files so tests can be run!

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ __pycache__/
 *.so
 
 # Smali test files
-*.smali
+# include these so tests function
+#*.smali
 
 # Distribution / packaging
 .Python
