Started writing the slicing function

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 
 # Smali test files
 # include these so tests function
+SendMessagesHelper.smali
 #*.smali
 
 # Distribution / packaging
