Automate tracing graph generation with example-graphs.html

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ __pycache__/
 SendMessagesHelper.smali
 #*.smali
 
+# Graph output
+tracing-graph.html
+
 # Distribution / packaging
 .Python
 build/
