Revised developer documentation .html files to not be included in repo directly.

--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,9 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Sphinx and/or pydoc documentation
 docs/_build/
+doc/*.html
 
 # PyBuilder
 .pybuilder/
