testing smaller chunk of smali code

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ __pycache__/
 # Smali test files
 # include these so tests function
 SendMessagesHelper.smali
+testforslicing/
 #*.smali
 
 # Graph output
